  [tool.poetry]
  name = "datagov-harvest-orchestrator"
  version = "0.1.0"
  description = ""
  authors = ["Datagov Team <datagov@gsa.gov>"]
  maintainers = [
    "Datagov Team <datagov@gsa.gov>",
]
readme = "README.md"
packages = [{include = "harvester"}]
  
[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.27"
python-dotenv = "^1.0.1"
flask = "^3.0.2"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

